02-envoy-gateway/22-listenersets/manifests/00-namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: platform
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-blue
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-green
