02-envoy-gateway/22-listenersets/manifests/httproute-green.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: green
  namespace: team-green
spec:
  parentRefs:
    - group: gateway.networking.x-k8s.io
      kind: XListenerSet
      name: green
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: green-backend
          port: 80
